<resources>
    <string name="app_name">SuperAdmin</string>
    <string name="menu_home">Home</string>
    <string name="menu_admin">Administración</string>
    <string name="menu_report">Reportes</string>
    <string name="login_welcome">Bienvenido a SuperAdmin</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_recovery_password">Recuperar contraseña</string>
    <string name="login_error_empty_fields">ERROR: No se permiten campos vacíos</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_password_successful">Cambio de contraseña exitoso</string>
    <string name="change_password_dialog_fragment_title">RECUPERAR\nCONTRASEÑA</string>
    <string name="change_password_dialog_fragment_add_email">Por favor\ningresa tu correo.</string>
    <string name="change_password_welcome">Por favor, ingresa tu nueva \ncontraseña</string>
    <string name="change_password_hint">Nueva contraseña</string>
    <string name="change_password_confirm_hint">Confirmar contraseña</string>
    <string name="change_password_condition_title">La contraseña debe tener:</string>
    <string name="change_password_condition_1">Una letra en minúscula</string>
    <string name="change_password_condition_2">Mínimo 8 carácteres</string>
    <string name="change_password_condition_3">Una letra en mayúscula</string>
    <string name="change_password_condition_4">Un número</string>
    <string name="change_password_button">Cambiar contraseña</string>
    <string name="change_password_error_not_equal">ERROR: Las constraseñas no son iguales</string>
    <string name="change_password_error_condition">ERROR: No se han cumplido todas las condiciones para crear la contraseña</string>
    <string name="home_fragment_logout_text">cerrar sesión</string>
    <string name="home_fragment_welcome">Bienvenido de vuelta</string>
    <string name="edit_personal_info_fragment_title">Información Personal</string>
    <string name="edit_personal_info_page_1">1/2</string>
    <string name="edit_personal_info_page_2">2/2</string>
    <string name="confirm_edit_personal_info_dialog_text">Se ha actualizado correctamente\nal usuario identificado con la cedula:</string>
    <string name="confirm_edit_personal_info_dialog_title">Actualización de usuario</string>
    <string name="confirm_create_user_dialog_text">Se ha creado correctamente\nal usuario identificado con la cedula:</string>
    <string name="confirm_create_user_dialog_title">Creación de usuario</string>
    <string name="text_button_next">Siguiente</string>
    <string name="text_button_save">Guardar</string>
    <string name="text_button_accept">ACEPTAR</string>
    <string name="email_hint">Correo</string>
    <string name="admin_fragment_title">Administración</string>
    <string name="admin_fragment_text">Por favor, selecciona un módulo</string>
    <string name="admin_module_title">Módulo Administrativo</string>
    <string name="transactional_module_title">Módulo Transaccional</string>
    <string name="admin_user_section_title">Administrar usuarios</string>
    <string name="admin_user_section_create_user_title">Crear usuarios</string>
    <string name="admin_user_section_edit_user_title">Editar usuarios</string>
    <string name="transactional_module_update_client">Actualizar Cliente</string>
    <string name="transactional_module_close_company">Cierre Empresa</string>
    <string name="transactional_module_connections">Conexiones</string>
    <string name="transactional_module_unlock_account">Desbloquear cuenta</string>
    <string name="transactional_module_validate_transaction_p2p">Validar transaccion P2P</string>
    <string name="transactional_module_homologation">Homologaciones</string>
    <string name="transactional_module_product">Producto</string>
    <string name="transactional_module_sub_product">Subproducto</string>
    <string name="transactional_module_forwarding_of_receip">Reenvío de comprobante</string>
    <string name="transactional_module_colab">Colaboradores</string>
    <string name="edit_user_title">Editar usuario</string>
    <string name="create_user_first_lastname_hint">Primer apellido</string>
    <string name="create_user_second_lastname_hint">Segundo apellido</string>
    <string name="create_user_name_hint">Nombre</string>
    <string name="create_user_number_hint">Número de celular</string>
    <string name="create_user_phone_hint">Telefono</string>
    <string name="create_user_status_hint">Estado</string>
    <string name="create_user_id_hint">Número de identificación</string>
    <string name="create_user_email_hint">Correo electrónico</string>
    <string name="no_permissions">No tienes permisos</string>
    <string name="search_user_text">Por favor busca un usuario para poder\neditar su información</string>
    <string name="seach_button">Buscar</string>
    <string name="result_search_title">Resultados de búsqueda</string>
    <string name="state_active_string">Activo</string>
    <string name="state_inactive_string">Inactivo</string>
    <string name="cc_string">Cc:</string>
    <string name="rol_string">Rol:</string>
    <string name="tel_string">Tel:</string>
    <string name="cel_string">Celular:</string>
    <string name="edit_button">Editar</string>
    <string name="users_not_found">No se han encontrado usuarios con los parametros escogidos</string>
    <string name="unlock_account_title">Desbloquar Cuenta</string>
    <string name="unlock_account_text">Por favor ingresa la cuenta o la identificación del propietario de la cuenta para validar su estado</string>
    <string name="unlock_account_hint_1">Cuenta</string>
    <string name="unlock_account_hint_2">Identificación</string>
    <string name="unlock_account_button_text">Buscar</string>
    <string name="clients_not_found">No se han encontrado clientes con los parametros escogidos</string>
    <string name="result_unlock_account_identification">Identificación:</string>
    <string name="result_unlock_account_restrictive_list">Propietaria lista restrictiva:</string>
    <string name="result_unlock_account_account">Cuenta:</string>
    <string name="result_unlock_account_locked_account">¿Cuenta Bloqueada?</string>
    <string name="result_unlock_account_user_locked">¿Usuario Bloqueado?</string>
    <string name="result_unlock_account_facial_locked">¿Bloqueado por reconocimiento facial?</string>
    <string name="ticket_changes_made">Cambios realizados:</string>
    <string name="titcket_title">TICKET</string>
    <string name="ticket_number_field">Número Ticket</string>
    <string name="ticket_changes_confirmation_button">CONFIRMAR</string>
    <string name="ticket_unlock_account_title">Confirmación de Desbloqueo</string>
    <string name="clean_p2p">Limpiar</string>
    <string name="consult_p2p">Consultar</string>
    <string name="dataTransaction_p2p">Fecha de la transacción</string>
    <string name="account_p2p">Cuenta</string>
    <string name="transaction_p2p">Transaccion</string>
    <string name="title_P2P">Reactivar La Transacción Place To Pay</string>
    <string name="update_client_msg"> Por favor ingresea la cuenta ó la identificación del propietario de la cuenta</string>
    <string name="update_client_title">Actualizar Cliente</string>

    <string-array name="search_option_spinner">
        <item>Tipo de identificación</item>
        <item>Rol</item>
    </string-array>

    <string-array name="edit_personal_info_spinner_id">
        <item>Cédula de ciudadanía</item>
        <item>Tarjeta de identidad</item>
        <item>Cédula de extranjería</item>
    </string-array>

    <string-array name="edit_personal_info_spinner_rol">
        <item>SUPERADMIN</item>
        <item>LOGISTICA</item>
    </string-array>

    <string-array name="edit_personal_info_spinner_company">
        <item>SUPERGIROS</item>
        <item>CODESA</item>
        <item>GANE</item>
    </string-array>

    <string-array name="gender_options">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="tipo_transaccion">
        <item>Giros - transferencia postal</item>
        <item>Pagos</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cuenta">numero de cuenta</string>
    <string name="fecha">Fecha</string>
    <string name="reenvio_comprobante">REENVIO COMPROBANTE</string>
    <string name="string_reenvio_comprobante" />
    <string name="string_string_reenvio_comprobante">REENVIO DE COMPROBANTE</string>
    <string name="consultar">Consultar</string>
    <string name="string_consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
</resources>