<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChangePasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_app" />

        <TextView
            android:id="@+id/textView2"
            style="@style/welcomeTitleStyle1"
            android:layout_marginTop="60dp"
            android:text="@string/change_password_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/newPasseordET"
            style="@style/editTextStyle1"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:hint="@string/change_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/confirmPasswordET"
            style="@style/editTextStyle1"
            android:layout_marginTop="16dp"
            android:hint="@string/change_password_confirm_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/newPasseordET"
            app:layout_constraintStart_toStartOf="@+id/newPasseordET"
            app:layout_constraintTop_toBottomOf="@+id/newPasseordET" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/change_password_condition_title"
            android:textColor="@color/blue_super_admin"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/numberConditionTV"
                style="@style/textViewConditionPasswordStyle1"
                android:layout_marginTop="8dp"
                android:text="@string/change_password_condition_4"
                app:layout_constraintStart_toStartOf="@+id/minCharConditionTV"
                app:layout_constraintTop_toBottomOf="@+id/minCharConditionTV" />

            <TextView
                android:id="@+id/mayusConditionTV"
                style="@style/textViewConditionPasswordStyle1"
                android:text="@string/change_password_condition_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/minCharConditionTV"
                style="@style/textViewConditionPasswordStyle1"
                android:layout_marginStart="24dp"
                android:text="@string/change_password_condition_2"
                app:layout_constraintStart_toEndOf="@+id/mayusConditionTV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/minusConditionTV"
                style="@style/textViewConditionPasswordStyle1"
                android:layout_marginTop="8dp"
                android:text="@string/change_password_condition_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mayusConditionTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/changePasswordButton"
            style="@style/buttonStyle1"
            android:layout_marginTop="32dp"
            android:text="@string/change_password_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>